--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         </div>
         <div class="nine columns main-description">
             <h1>Ye Zhu</h1>
-            <p>Ph.D. candidate in Computer Science, Illinois Institute of Technology </br> Visiting Ph.D. in Computer Science, Princeton University</p>
-            <p>Contact: yzhu96 [AT] hawk.iit.edu</p>
+            <p>Postdoc Researcher in Computer Science <br> Princeton University, NJ, USA</p>
+            <p>Contact: yezhu [AT] princeton.edu</p>
             <!-- <p>https://l-yezhu.github.io/assets/cv/cv.pdf</p> -->
             <p>
 
@@ -107,8 +107,8 @@
           <li class="navbar-item"><a class="navbar-link" href=/index.html#news>News</a></li>
           <li class="navbar-item"><a class="navbar-link" href=/index.html#publications>Main Research</a></li>
           <li class="navbar-item"><a class="navbar-link" href=/index.html#publications2>ML4Astro</a></li>
-          <li class="navbar-item"><a class="navbar-link" href=/index.html#talk>Talks</a></li>
-          <li class="navbar-item"><a class="navbar-link" href=/index.html#tidbit>Tidbits</a></li>
+          <li class="navbar-item"><a class="navbar-link" href=/index.html#>Talks</a></li>
+          <li class="navbar-item"><a class="navbar-link" href=/index.html#>Tidbits</a></li>
         </ul>
       </div>
     </nav>
@@ -119,30 +119,22 @@
 
 
   <p>
-I am a Ph.D. student in Computer Science at Illinois Institute of Technology, and a visiting Ph.D. student in the Visual AI lab at Princeton University. </p>
-
-<p>
-My main research focuses on multimodal learning (vision, audio, and languages) and generative models, working with <a href="https://scholar.google.com/citations?user=zhi-j1wAAAAJ&hl=en" target="_blank">Prof. Yan Yan</a>, <a href="https://www.cs.princeton.edu/~olgarus/" target="_blank">Prof. Olga Russakovsky</a>, and <a href="http://yu-wu.net/" target="_blank">Prof. Yu Wu</a>. </br>
-I am also interested in #AI4Science, especially in #ML4Astrophysics, which aims to solve real scientific problems using learning-based models and tools.
+I am a postdoc research associate in Computer Science at Princeton University, working with <a href="https://www.cs.princeton.edu/~olgarus/">Prof. Olga Russakovsky</a> at the VisualAI lab. My main research works focus on multimodal learning and generation (vision, audio, and language), with interdisciplinary research interests in Machine Learning for Astrophysics. 
 </p>
 
 <p>
-I received my B.S. and M.S. degrees in MAE from Shanghai Jiao Tong University, China, in 2016 and 2019, respectively. During my undergrad, I received two-year intensive training in mathematics and physics under the <a href="https://en.wikipedia.org/wiki/Classe_pr%C3%A9paratoire_aux_grandes_%C3%A9coles">"French classe préparatoire"</a> system.
-I also studied at Ecole Polytechnique in France and got my French Engineering diploma in 2019.
-Throughout my graduate studies, I have interned several times in the industry, including Snap Inc. in the USA in 2021, and Bang & Olufsen A/S in Denmark in 2018. 
-I serve as a reviewer for CVPR, ECCV, ICCV, NeurIPS, ICML, AAAI, IEEE Transactions on Multimedia, ACM Multimedia, ICASSP, Neurocomputing and etc.
-  </p>
+Prior to the postdoc, I received my Ph.D. in Computer Science from Illinois Institute of Technology, USA in 2023; and my M.S. and B.S. in Mechanical Engineering from Shanghai Jiao Tong University, China, in 2019 and 2016, respectively. I received the French Engineering Education system and studied at Ecole Polytechnique in France in 2016 and 2017. I was a research intern at Bang&Olufsen in Denmark in 2018, and at Snap in the USA in 2021.
+</p>
 
-  <p>
-In addition to the academic work, I also hold French language diplomas in both <a href="https://en.wikipedia.org/wiki/Dipl%C3%B4me_approfondi_de_langue_fran%C3%A7aise#DALF_C1">DALF and TCF C1</a>, and have been a French-Chinese translator for the European scientific magazine <a href="https://fr.wikipedia.org/wiki/Science_et_Vie" target="_blank">Science & Vie</a> since 2015.
-  </p>
+<p>
+I serve as a reviewer for CVPR/ECCV/ICCV/NeurIPS/ICLR/ICML/AAAI. 
+I also hold French language diplomas in both DALF and TCF C1, and was a part-time French translator for the European scientific magazine Science & Vie during 2015 - 2022 (sadly stopped due to a heavy research workload).
+</p>
 
+<p>
+Find full <a href=/assets/cv/cv.pdf target="_blank">CV/resume</a> with last update in 09/2023.
+</p>
 
-<p>Find full <a href=/assets/cv/cv.pdf target="_blank">CV/resume</a> with last update in 04/2023.</p>
-
-<!-- <p>
-
-</p> -->
 
 </div>
 
@@ -151,13 +143,10 @@ In addition to the academic work, I also hold French language diplomas in both <
 <div class="docs-section" id="news">
   <h4>News</h4>
   <p>
+    09/2023: Finish my Ph.D. defense and join Princeton CS as a postdoc researcher.
+  </p>
+  <p>
     04/2023: Our first #ML4Astro work that applies Diffusion Models to predict the density of molecular clouds has been accepted to the top astronomy venue The Astrophysical Journal (APJ). Chere <a href="https://arxiv.org/abs/2304.01670">here</a>!
-  </p>
-  <p>
-    03/2023: Received the ACM-W scholarship and ICLR2023 financial assistance award.
-  </p>
-  <p>
-  03/2023: One paper about Denoising Diffusion Models for astrophysics application accepted to ICLR2023 Workshop Physics4ML.
   </p>
   <p>
   01/2023: One paper about Discrete Contrastive Diffusion accepted to ICLR2023.
@@ -656,11 +645,27 @@ In addition to the academic work, I also hold French language diplomas in both <
 
 
 <div class="docs-section" id="talk">
-  <h4>Talks</h4>
+  <h4>Selected Talks and Travel</h4>
 
-<!--    <p>
-  05/2023: Talk on Diffusion Models at Shanghai Jiao Tong University, China.
-  </p>  -->
+  <p>
+    Upcoming:
+  </p>
+
+  <p>
+    10/2023: ICCV2023, Paris, France.
+  </p>
+
+   <p>
+  05/2023: Talk on Diffusion Models at Shanghai Jiao Tong University, Shanghai, China.
+  </p> 
+
+  <p>
+    05/2023: Talk on Diffusion Models at Wuhan University, Wuhan, China.
+  </p>
+
+    <p>
+    05/2023: ICLR2023, Kigali, Rwanda.
+  </p>
 
 
    <p>
@@ -672,9 +677,9 @@ In addition to the academic work, I also hold French language diplomas in both <
   </p> 
 
 
-   <p>
+<!--    <p>
   11/2022: Talk (remote) on Multimodal Generation for Audio and Music at Bang & Olufsen, Denmark.
-  </p> 
+  </p>  -->
 
 
 </div>
@@ -682,7 +687,7 @@ In addition to the academic work, I also hold French language diplomas in both <
 
 <!-- ========== RESUME ========== -->
 <div class="docs-section" id="tidbit">
-  <h4>TIDBITS</h4>
+  <h4>Tidbits</h4>
 
      <p>
  My full name is 竺 烨, which shares the exact pronunciation as "Bamboo Leaf" in Chinese.
@@ -693,11 +698,6 @@ I enjoy reading, hiking, cooking, traveling, and taking random photos. I read bo
 </p>
 
 
-<!-- <div class="docs-section" id="template">
-    Thanks to <a href="https://github.com/msaveski/www_personal" target="_blank">Martin Saveski</a> for providing the template for the web design. 
-
-
-</div> -->
 
 
     <div class="footer">
@@ -706,7 +706,7 @@ I enjoy reading, hiking, cooking, traveling, and taking random photos. I read bo
           Ye Zhu
         </div>
         <div class="four columns">
-          Contact: yzhu96 [AT] hawk.iit.edu
+          Contact: yezhu [AT] princeton.edu
         </div>
         <div class="four columns">
 <!--           <span onclick="window.open('')" style="cursor: pointer">
