--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ Find full <a href=/assets/cv/cv.pdf target="_blank">CV/resume</a> with last upda
       
       
         <div class="paper">
-          <p class="title"><b>Boundary Guided Mixing Trajectory for Semantic Control with Diffusion Models</b></p>
+          <p class="title"><b>Boundary Guided Learning-Free Semantic Control with Diffusion Models</b></p>
           <p><u><b>Ye Zhu</b></u>, Yu Wu, Zhiwei Deng, Olga Russakovsky, and Yan Yan</p>
           <p><i> Conference on Neural Information Processing Systems <b>(NeurIPS)</b>, 2023</i></p>
            <div class="paper-buttons">
